# AlfredGF-rs

./: Cargo.toml  README.md  spirv_compiler.py
archived/: alfredgf.rs
examples/render/: main.rs  shader.vert.spv
mytests/: main.rs
src/: alfredgf.rs  config_structs.rs  constructors.rs  enums.rs  generic.rs  implementation.rs  lib.rs  main.rs  returned_structs.rs  shader.vert  shader.vert.spv  util_structs.rs
tests/: integration-test.rs  shader.vert
