[package]
name = "AlfredGF-rs"
version = "0.0.0"
authors = ["Lonsdaleiter <lonsdaleiteproductions@gmail.com>"]
edition = "2018"

[[test]]
name = "mytests"
path = "mytests/main.rs"
harness = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.20.0"
wgpu = "0.4.0"
zerocopy = "0.2.8"
